viewport has been changed

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- <meta name="viewport" content="1185" /> --> 
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+	<meta name="viewport" content="1185" />
     <title>Muscles-training/Тренажер для тренировки мышц</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
