--- a/index.html
+++ b/index.html
@@ -115,12 +115,11 @@
 
           <div class="description active">
             <h2>приложение «Тренажер мышц тела»</h2>
-            <h3>Инструкция по примененнию:</h3>
-            <ul>
-              <li>На изображении слева выберите область тела, которую Вы хотите тренировать</li>
-              <li>В правой части экрана появится название мышцы (или группы мышц) и список упражнений, направленных на тренировку этой области тела</li>
-              <li>Выполняйте упражнения поэтапно, следуя нашим рекомендациям  </li>
-            </ul>
+            <h3>Инструкция:</h3>
+
+              <p><em>Вы попали в приложение-тренажер для мышц. Здесь вы можете найти упражнения на любую мышцу, которую вы бы хотели укрепить. Для этого Вам нужно нажать на неё на человеке в левой части экрана. После нажатия, в правой части экрана появится список упражнений с пояснениями к ним.
+                Для того, чтобы ваша тренировка была продуктивной и не травмоопасной, ниже вы можете увидеть советы по выполнению упражнений.</em>
+                </p>
             <h3>Советы для всех упражнений:</h3>
             <ul>
               <li>Нужно выполнять качественную разминку перед тренировкой, чтобы подготовить мышцы к работе. </li>
