The unnecessary code from css hes been delited

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="viewport" content="1185" />
-    <title>Muscles-training/Тренажер для тренировки мышц</title>
+    <title>Muscles training guide / Тренажер для тренировки мышц</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
@@ -113,7 +112,7 @@
             <div class="rest-parts"></div>
           </div>
 
-          <div class="description active">
+          <div class="description main active">
             <h2>приложение «Тренажер мышц тела»</h2>
             <h3>Инструкция:</h3>
 
