fix: The index.html has been fixed

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <li>First, you need to achieve the correct technique for performing each exercise, and only then increase the load. This is the only way to minimize the risk of injury. </li>
               <li>It is best to periodically replace the exercises in your workout so that the muscles do not get used to the same movement.</li>
             </ul>
-            <a href="index_ru.html" class="language">Перейти к английской версии приложения</a>
+            <a href="index_ru.html" class="language">Перейти к версии приложения на русском языке</a>
           </div>
           <div class="description deltoid">
             <h2>Deltoid muscles</h2>
